--- a/squidproxy/assets/css/admin-style.css
+++ b/squidproxy/assets/css/admin-style.css
@@ -87,7 +87,6 @@ h4 {
 td.hading-td {
     vertical-align: middle;
 }
-
 td .list-textarea {
     max-height: 120px;
     overflow-y: auto;
@@ -99,4 +98,7 @@ td .list-textarea span {
 .ad_on_table_dash tbody tr td {
     text-align: left;
     width: 50%;
+}
+.custom-proxy-btns {
+    margin: 10px 0px 0px;
 }
